src/core/styles/components/_common/_igx-vhelper.scss
%vhelper-display {
    display: block;
    overflow: auto;
    z-index: 24;
}

%vhelper--vertical {
    position: absolute;
    width: 18px;
    top: 0;
    right: 0;
}

%vhelper--horizontal {
    width: 100%;
}

%vhelper-content--vertical {
    width: 1px;
}

%vhelper-content--horizontal {
    height: 1px;
}

@include b(igx-vhelper) {
    @include m(vertical) {
        @extend %vhelper-display !optional;
        @extend %vhelper--vertical !optional;

        @include e(placeholder-content) {
            @extend %vhelper-content--vertical !optional;
        }
    }

    @include m(horizontal) {
        @extend %vhelper-display !optional;
        @extend %vhelper--horizontal !optional;

        @include e(placeholder-content) {
            @extend %vhelper-content--horizontal !optional;
        }
    }
}

